Fixed scrollbars

--- a/public/stylesheets/jquery.jscrollpane.css
+++ b/public/stylesheets/jquery.jscrollpane.css
@@ -18,7 +18,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 35px;
+    width: 37px;
     height: 100%;
     background: transparent;
 }
@@ -28,7 +28,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 35px;
+    height: 37px;
     background: transparent;
 }
 
@@ -47,7 +47,7 @@
 }
 
 .jspTrack {
-    background: transparent;
+    background: #ccc;
     position: relative;
 }
 
@@ -65,10 +65,14 @@
     background: -webkit-gradient(linear, left top, left bottom, from(#E7E7E7), to(#C1C1C1));
 }
 
-.jspHorizontalBar .jspTrack,
+.jspHorizontalBar .jspTrack {
+    float: left;
+    height: 37px;
+}
+
 .jspHorizontalBar .jspDrag {
     float: left;
-    height: 100%;
+    height: 34px;
 }
 
 .jspArrow {
@@ -83,7 +87,7 @@
 }
 
 .jspVerticalBar .jspArrow {
-    height: 35px;
+    height: 34px;
 }
 
 .jspArrow {
@@ -101,24 +105,32 @@
 
 .jspArrowLeft, .jspArrowLeft:hover {
     background: #C1C1C1 url(../images/arrow_left.png) no-repeat 8px 8px;
+    border-bottom-right-radius: 0px;
+    border-top-right-radius: 0px;
 }
 
 .jspArrowRight, .jspArrowRight:hover {
     background: #C1C1C1 url(../images/arrow_right.png) no-repeat 8px 8px;
+    border-bottom-left-radius: 0px;
+    border-top-left-radius: 0px;
 }
 
 .jspArrowDown, .jspArrowDown:hover {
     background: #C1C1C1 url(../images/arrow_down.png) no-repeat 8px 8px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
 }
 
 .jspArrowUp, .jspArrowUp:hover {
     background: #C1C1C1 url(../images/arrow_up.png) no-repeat 8px 8px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 .jspHorizontalBar .jspArrow {
-    width: 35px;
+    width: 34px;
     float: left;
-    height: 100%;
+    height: 34px;
 }
 
 .jspVerticalBar .jspArrow:focus {
@@ -126,7 +138,7 @@
 }
 
 .jspCorner {
-    background: transparent;
+    background: #CCC;
     float: left;
     height: 100%;
 }
